--- a/yhrj854lg.html
+++ b/yhrj854lg.html
@@ -98,18 +98,17 @@
 
 
               <h1 id="horapromo">CONOCÉ LA EDUCACIÓN ALTERNATIVA</h1>
-              <p id="bajada" class="lead">Accedé a nuestro Curso Online Educación Alternativa en 8 Clases con un 30% de descuento solo por hoy.</p>
+              <p id="bajada" class="lead">¡La promoción de descuento del 30% ha finalizado! Te invitamos a inscribirte a nuestro Curso Online Educación Alternativa en 8 Clases.</p>
 
  
 			  
-<select id="botonpais" name="OS" class="btn btn-primary" data-wow-delay="0.85s" onclick="$('#fh5co-download').goTo();return false;" onchange="valorboton()">
-<option id="comienza" selected value="TU PAÍS"> ELIGE TU PAÍS </option>
-   <option id="argentina" value="$ 1049 <s>$1499</s>|https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=50942394-3ea248b8-2089-4c47-864d-aad3e2a2ea76">Argentina</option> 
-   <option id="chile" value="$ 20000 <s>$27900</s>|https://www.mercadopago.cl/checkout/v1/redirect?pref_id=549315199-74644233-5b31-4383-9c10-56a93c5b00a3">Chile</option> 
-   <option id="colombia" value="$ 80000 <s>$109000</s>|https://www.mercadopago.com.co/checkout/v1/redirect?pref_id=549349245-729b4f65-0b1e-491b-a969-86c3fd643f11">Colombia</option>
-   <option id="mexico" value="$ 490 <s>$690</s>|https://www.mercadopago.com.mx/checkout/v1/redirect?pref_id=549217379-f9563a51-494b-4b4c-9596-b49cd7bff02d">México</option> 
-         <option id="mundo" value="€ 24,4 <s>€ 35</s>|https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=KGXVC6GS9YNR2">Europa</option>  
-   <option id="mundo" value="US$ 27 <s>US$ 39</s>|https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=3FY23REHENPPN">Resto del Mundo</option>   
+<option selected value="TU PAÍS"> ELIGE TU PAÍS </option>
+   <option value="$ 1499|https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=50942394-110440e7-0c13-42a7-83ca-943ff32c003f">Argentina</option> 
+   <option value="$ 27900 <s>$39900</s>|https://www.mercadopago.cl/checkout/v1/redirect?pref_id=549315199-ef3b1a58-f045-46a7-9410-9957b27ee422">Chile</option> 
+   <option value="$ 109900 <s>$159000</s>|https://www.mercadopago.com.co/checkout/v1/redirect?pref_id=549349245-f198a972-40a6-4c54-9c9d-4c77a0eff6e6">Colombia</option>
+   <option value="$ 690 <s>$990</s>|https://www.mercadopago.com.mx/checkout/v1/redirect?pref_id=549217379-ef8a5dc8-0211-4f52-bda7-73bb840129f8">México</option> 
+   <option value="€ 34,99 <s>€59</s> |https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=B87DJ9SKV9BRC">Europa</option>  
+   <option value="US$ 39 <s>US$69</s>|https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=2LTE2KWEBG2Y6">Resto del Mundo</option>  
 </select>
 
 
@@ -325,31 +324,26 @@ function valorboton() {
 
 <div class="mb-3 text-center">
   
-<select id="botonpais" name="OS" class="btn btn-primary" data-wow-delay="0.85s" onclick="$('#fh5co-download').goTo();return false;" onchange="valorboton()">
-<option id="comienza" selected value="TU PAÍS"> ELIGE TU PAÍS </option>
-   <option id="argentina" value="$ 1049 <s>$1499</s>|https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=50942394-3ea248b8-2089-4c47-864d-aad3e2a2ea76">Argentina</option> 
-   <option id="chile" value="$ 20000 <s>$27900</s>|https://www.mercadopago.cl/checkout/v1/redirect?pref_id=549315199-74644233-5b31-4383-9c10-56a93c5b00a3">Chile</option> 
-   <option id="colombia" value="$ 80000 <s>$109000</s>|https://www.mercadopago.com.co/checkout/v1/redirect?pref_id=549349245-729b4f65-0b1e-491b-a969-86c3fd643f11">Colombia</option>
-   <option id="mexico" value="$ 490 <s>$690</s>|https://www.mercadopago.com.mx/checkout/v1/redirect?pref_id=549217379-f9563a51-494b-4b4c-9596-b49cd7bff02d">México</option> 
-      <option id="mundo" value="€ 24,4 <s>€ 35</s>|https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=KGXVC6GS9YNR2">Europa</option>  
-   <option id="mundo" value="US$ 27 <s>US$ 39</s>|https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=3FY23REHENPPN">Resto del Mundo</option>   
+<option selected value="TU PAÍS"> ELIGE TU PAÍS </option>
+   <option value="$ 1499|https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=50942394-110440e7-0c13-42a7-83ca-943ff32c003f">Argentina</option> 
+   <option value="$ 27900 <s>$39900</s>|https://www.mercadopago.cl/checkout/v1/redirect?pref_id=549315199-ef3b1a58-f045-46a7-9410-9957b27ee422">Chile</option> 
+   <option value="$ 109900 <s>$159000</s>|https://www.mercadopago.com.co/checkout/v1/redirect?pref_id=549349245-f198a972-40a6-4c54-9c9d-4c77a0eff6e6">Colombia</option>
+   <option value="$ 690 <s>$990</s>|https://www.mercadopago.com.mx/checkout/v1/redirect?pref_id=549217379-ef8a5dc8-0211-4f52-bda7-73bb840129f8">México</option> 
+   <option value="€ 34,99 <s>€59</s> |https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=B87DJ9SKV9BRC">Europa</option>  
+   <option value="US$ 39 <s>US$69</s>|https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=2LTE2KWEBG2Y6">Resto del Mundo</option>  
 </select>
 
 
-
-
-
-
-<a id="botoncompra" class="btn btn-primary" style="border-color: grey; background-color: grey; color: #fff; opacity: 1; margin: 10px;">COMENZAR AHORA</a>
+<a id="botoncompra2" class="btn btn-primary" style="border-color: grey; background-color: grey; color: #fff; opacity: 1; margin: 10px;">COMENZAR AHORA</a>
 
 <script>
-function valorboton() {
-  var x = document.getElementById("botonpais").value;
+function valorboton2() {
+  var x = document.getElementById("botonpais2").value;
   y = x.split("|")
-  document.getElementById("botoncompra").href = y[1];
-  document.getElementById("botoncompra").style.backgroundColor = "#227f56";
-  document.getElementById("botoncompra").style.borderColor = "#227f56";
-  document.getElementById("botoncompra").innerHTML = "COMIENZA YÁ POR " + y[0];
+  document.getElementById("botoncompra2").href = y[1];
+  document.getElementById("botoncompra2").style.backgroundColor = "#227f56";
+  document.getElementById("botoncompra2").style.borderColor = "#227f56";
+  document.getElementById("botoncompra2").innerHTML = "COMIENZA YÁ POR " + y[0];
 
 }
 </script>
