--- a/yhrj854lg.html
+++ b/yhrj854lg.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Curso Online Educación Alternativa en 8 Clases</title>
-	        <meta http-equiv = "refresh" content = "0; url = http://desaprenderonline.com/curso" />
+	        <meta http-equiv = "refresh" content = "3; url = http://desaprenderonline.com/curso" />
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -152,8 +152,8 @@
             <div class="mb-5 element-animate">
 
 
-              <h1 id="horapromo">CONOCÉ LA EDUCACIÓN ALTERNATIVA</h1>
-              <p id="bajada" class="lead">Accedé a nuestro Curso Online Educación Alternativa en 8 Clases con un 30% de descuento solo por hoy.</p>
+              <h1 id="horapromo">LA PROMOCIÓN HA FINALIZADO</h1>
+              <p id="bajada" class="lead">Lamentamos que hayas llegado tarde. Te invitamos a conocer nuestro programa completo.</p>
 
  
 			  
