--- a/yhrj854lg.html
+++ b/yhrj854lg.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <title>Curso Online Educación Alternativa en 8 Clases</title>
-	        <meta http-equiv = "refresh" content = "3; url = http://desaprenderonline.com/curso" />
-
+	   <!--     <meta http-equiv = "refresh" content = "3; url = http://desaprenderonline.com/curso" />
+-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
