--- a/curso/index.html
+++ b/curso/index.html
@@ -32,15 +32,8 @@
 <body>
 
 <!-- Analytics -->
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-162296781-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+<!-- Global site tag (gtag.js) - Google Ads: 972459097 --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-972459097"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-972459097'); </script>
 
-  gtag('config', 'UA-162296781-1');
-</script>
 
  <!-- Facebook Pixel Code -->
 <script>
