--- a/curso/mundo.html
+++ b/curso/mundo.html
@@ -101,13 +101,13 @@ src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
                 <div class="card-wrapper ">
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
-                        <div class="mbr-section-btn text-center"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ALNYSBGMAT2AE" class="btn btn-secondary display-1" target="_blank">1</a></div>
+                        <div class="mbr-section-btn text-center"><a href="http://desaprenderonline.com/pagos/payment.html?YW1vdW50PTM5JmlkPUN1cnNvIE9ubGluZSBFZHVjYWNp824gQWx0ZXJuYXRpdmEgZW4gOCBDbGFzZXM=" class="btn btn-secondary display-1" target="_blank">1</a></div>
                         <img src="assets/images/888151f8-a6f6-4385-b12d-92e5ea57263a-676x380.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">Realiza tu pago con tarjeta de crédito via Paypal</h4>
                         <p class="mbr-text mbr-fonts-style align-left display-7">Puedes optar por realizar el pago con tarjeta de crédito via Paypal. &nbsp;Si no tienes usuario, el sistema de pagos Paypal te pedirá que crees uno. Es un proceso muy sencillo.
-<br><strong><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ALNYSBGMAT2AE" target="_blank">IR A PAYPAL AHORA</a></strong></p>
+<br><strong><a href="http://desaprenderonline.com/pagos/payment.html?YW1vdW50PTM5JmlkPUN1cnNvIE9ubGluZSBFZHVjYWNp824gQWx0ZXJuYXRpdmEgZW4gOCBDbGFzZXM=" target="_blank">IR A PAYPAL AHORA</a></strong></p>
                     </div>
                 </div>
             </div>
