--- a/curso/aFbnuRC3.html
+++ b/curso/aFbnuRC3.html
@@ -89,9 +89,9 @@ src="https://www.facebook.com/tr?id=2210428312595198&ev=PageView&noscript=1"
    <option id="argentina" value="$ 1049 <s>$1499</s>|https://www.mercadopago.com.ar/checkout/v1/redirect?pref_id=50942394-3ea248b8-2089-4c47-864d-aad3e2a2ea76">Argentina</option> 
    <option id="chile" value="$ 20000 <s>$27900</s>|https://www.mercadopago.cl/checkout/v1/redirect?pref_id=549315199-74644233-5b31-4383-9c10-56a93c5b00a3">Chile</option> 
    <option id="colombia" value="$ 80000 <s>$109000</s>|https://www.mercadopago.com.co/checkout/v1/redirect?pref_id=549349245-729b4f65-0b1e-491b-a969-86c3fd643f11">Colombia</option>
-   <option id="mexico" value="$ 490 <s>$690</s>|https://www.mercadopago.com.mx/checkout/v1/redirect?pref_id=549217379-f9563a51-494b-4b4c-9596-b49cd7bff02d">México</option> 
-         <option id="mundo" value="€ 24,4 <s>€ 35</s>|https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=KGXVC6GS9YNR2">Europa</option>  
-   <option id="mundo" value="US$ 27 <s>US$ 39</s>|https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=3FY23REHENPPN">Resto del Mundo</option>   
+   <option id="mexico" value="$ 490 <s>$690</s>|http://desaprenderonline.com/curso/mexico-off">México</option> 
+         <option id="mundo" value="€ 24,4 <s>€ 35</s>|http://desaprenderonline.com/curso/europa-off">Europa</option>  
+   <option id="mundo" value="US$ 27 <s>US$ 39</s>|http://desaprenderonline.com/curso/mundo-off">Resto del Mundo</option>   
 </select>
 
 
