--- a/pagos/payment.html
+++ b/pagos/payment.html
@@ -10,7 +10,7 @@
 <body>
   <script src="https://www.paypal.com/sdk/js?currency=USD&client-id=Acq56A6nT5LgFk8KdpejbSeTuDo6EfkqnTJpeUlCHpE1J4gHHUaValcFQk58x07MpiKB0AP5RpXH8pVR"></script>
     <br><br>
-   <h2 style="text-align: center">Amount to pay: <span id="amt"></span> USD</h2>
+   <h2 style="text-align: center">Monto a Abonar <span id="amt"></span> USD</h2>
     <br><br>
     <div style="text-align: center" id="paypal-button-container"></div>
 
